加密解密优化，适配jdk11+
Signed-off-by: freakchicken <jiangqiang110@126.com>